fixed issue in create senetnce n increased scrollbar width

--- a/src/components/cell/lido-cell.css
+++ b/src/components/cell/lido-cell.css
@@ -1,3 +1,31 @@
+.lido-wrap::-webkit-scrollbar {
+  width: 20px; 
+}
+
+.lido-wrap::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 10px;
+}
+
+.lido-wrap::-webkit-scrollbar-thumb {
+  background-color: #888; 
+  border-radius: 10px;
+  border: 4px solid #f1f1f1; 
+}
+.lido-col::-webkit-scrollbar {
+  width: 20px; 
+}
+
+.lido-col::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 10px;
+}
+
+.lido-col::-webkit-scrollbar-thumb {
+  background-color: #888; 
+  border-radius: 10px;
+  border: 4px solid #f1f1f1; 
+}
 .lido-col {
   /* position: absolute; */
   top: var(--y, 0);
